--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,5 @@
-# Tox (http://tox.testrun.org/) is a tool for running tests
-# in multiple virtualenvs. This configuration file will run the
-# test suite on all supported python versions. To use it, "pip install tox"
-# and then run "tox" from this directory.
-
 [tox]
 envlist = py27
-skipdist = True
 
 [testenv]
 setenv = VIRTUAL_ENV={envdir}
@@ -13,16 +7,16 @@ deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands = python setup.py testr --slowest --testr-args='{posargs}'
 
-[testenv:coverage]
-commands = python setup.py testr --coverage
-
 [testenv:pep8]
-commands = flake8 {posargs}
+commands = flake8
+
+[testenv:cover]
+setenv = VIRTUAL_ENV={envdir}
+commands = python setup.py testr --coverage --testr-args='{posargs}'
 
 [testenv:venv]
 commands = {posargs}
 
 [flake8]
-show-source = True
-builtins = _
+show-source = true
 exclude=.venv,.git,.tox
